# BruhBot5555

./: LICENSE  constants.py  main.py  pyproject.toml  readme.md
.instagramy_cache/: binus_bandung_user.json  fypbinus_user.json  himtibinusbandung_user.json  informatics.binusbandung_user.json  sadc.binusbandung_user.json
cogs/: Reminder.py
commands/: Reminder.py
functions/: instagramfun.py  reminderfun.py  tablerfun.py  weatherquotefun.py
