[tool.poetry]
name = "repl_python3_BruhBot5555"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
emoji = "^1.2.0"
replit = "^3.1.0"
flask = "^2.0.1"
schedule = "^1.1.0"
pycog3 = "^0.1.27"
discord-pretty-help = "1.3.1"
tabulate = "^0.8.9"
instagramy = "^4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
